--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "doctrine/orm": ">=2.3",
         "creof/geo-parser": "~2.0",
         "creof/wkt-parser": "~2.0",
-        "unit27/creof-wkb-parser": "dev-master"
+        "unit27/creof-wkb-parser": "master"
     },
     "require-dev": {
         "phpunit/phpunit": "<5.0",
